# todo

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  stack.yaml  todo.cabal
.github/workflows/: ci.yaml
app/: Main.hs
benchmarks/: Main.hs  baseline_bench.csv  baseline_ubuntu-latest_9.10.1_ci.csv  baseline_ubuntu-latest_9.8.2_ci.csv  baseline_ubuntu-latest_9.8.4_ci.csv  bench.csv
docs/: Todo-Configuration-Default.html  Todo-Data-Sorted-Internal.html  Todo-Data-Sorted-RevSort.html  Todo-Data-Sorted.html  Todo-Data-Task-Optics.html  Todo-Data-Task.html  Todo-Data-TaskId-Internal.html  Todo-Data-TaskId.html  Todo-Data-TaskPriority.html  Todo-Data-TaskStatus.html  Todo-Data-Timestamp.html  Todo-Exception.html  Todo-Index-Internal.html  Todo-Index-Optics.html  Todo-Index.html  Todo-Utils.html  doc-index-124.html  doc-index-126.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  (+20 more)
docs/src/: Paths_todo.html  Todo.Configuration.Default.html  Todo.Data.Sorted.Internal.html  Todo.Data.Sorted.RevSort.html  Todo.Data.Sorted.html  Todo.Data.Task.Optics.html  Todo.Data.Task.html  Todo.Data.TaskId.Internal.html  Todo.Data.TaskId.html  Todo.Data.TaskPriority.html  Todo.Data.TaskStatus.html  Todo.Data.Timestamp.html  Todo.Exception.html  Todo.Index.Internal.html  Todo.Index.Optics.html  Todo.Index.html  Todo.Prelude.html  Todo.Utils.html
examples/: config.toml  config_windows.toml  index.json  index2.json  todo.json
lib/cli/src/Todo/: Cli.hs
lib/cli/src/Todo/Cli/: AppT.hs  Prelude.hs  Render.hs
lib/cli/src/Todo/Cli/Command/: Delete.hs  Insert.hs  List.hs  Update.hs  Utils.hs
lib/cli/src/Todo/Cli/Configuration/: Args.hs  ConfigPhase.hs  Core.hs  Merged.hs  Toml.hs
lib/cli/src/Todo/Cli/Render/: TaskId.hs  TaskPriority.hs  TaskStatus.hs  Timestamp.hs  (+1 more)
lib/cli/test/config/: Main.hs
lib/cli/test/config/toml/: commands.toml  no-path.toml  one.json
lib/cli/test/functional/: Main.hs
lib/core/src/Todo/: Exception.hs  Index.hs  Prelude.hs  Utils.hs
lib/core/src/Todo/Configuration/: Default.hs
lib/core/src/Todo/Data/: Sorted.hs  TaskId.hs  TaskPriority.hs  TaskStatus.hs
lib/core/src/Todo/Index/: Internal.hs  Optics.hs
lib/core/test/unit/: Main.hs
lib/core/test/unit/Unit/: Prelude.hs
src/: Todo.hs
src/Todo/: AppT.hs  Exception.hs  Index.hs  Prelude.hs  Render.hs  Runner.hs  Utils.hs
src/Todo/Command/: Delete.hs  Insert.hs  List.hs  Update.hs  Utils.hs
src/Todo/Configuration/: Args.hs  ConfigPhase.hs  Core.hs  Merged.hs  Toml.hs
src/Todo/Configuration/Data/: Command.hs  InteractiveSwitch.hs  RevSort.hs  Utils.hs
src/Todo/Data/: Sorted.hs  Task.hs  TaskId.hs  TaskPriority.hs  TaskStatus.hs  Timestamp.hs
src/Todo/Data/Sorted/: Internal.hs  RevSort.hs
src/Todo/Data/Task/: Render.hs  Sorted.hs  TaskId.hs  TaskPriority.hs  TaskStatus.hs
src/Todo/Data/Task/Render/: Utils.hs
src/Todo/Data/Task/Sorted/: Internal.hs
src/Todo/Data/Task/TaskId/: Internal.hs
src/Todo/Data/TaskId/: Internal.hs
src/Todo/Index/: Internal.hs  Safe.hs
src/Todo/Render/: Utils.hs
src/Todo/Runner/: Args.hs
test/functional/: Main.hs
test/functional/Functional/: Delete.hs  Insert.hs  List.hs  Prelude.hs  Update.hs
test/functional/Functional/Delete/input/: delete_repeatedly.json
test/functional/Functional/Delete/output/: testDeleteBadId.golden  testDeleteBlockedId.golden  testDeleteBlockedSuccess.golden  testDeleteGroup.golden  testDeleteGroupSubtask.golden  testDeleteMany.golden  testDeleteNone.golden  testDeleteOne.golden  testDeleteTaskRepeatedly.golden  testInteractiveDelete.golden  testInteractiveDeleteRetry.golden
test/functional/Functional/Insert/output/: testDefaultStatusPriority.golden  testFailureRetry.golden  testInsertGroup.golden  testInsertGroupFailureRetry.golden  testInsertNestedGroup.golden  testInsertNone.golden  testInsertOne.golden
test/functional/Functional/List/input/: bad_status.json  blocked_ids_empty.json  dup_ids.json  id_empty.json  status_blocked_bad_ref.json  status_blocked_text_langle.json
test/functional/Functional/List/output/: bad_status.golden  example.golden  example_priority.golden  example_priority_status.golden  example_priority_status_unicode.golden  example_priority_unicode.golden  example_status.golden  example_status_priority.golden  example_status_priority_unicode.golden  example_status_unicode.golden  example_unicode.golden  id_comma.golden  id_empty.golden  nested_sort.golden  status_blocked_bad_ref.golden  status_blocked_ids_empty.golden  status_blocked_text_langle.golden  testBadAesonKeyFails.golden  testIdCommaFails.golden  testIdDupsFails.golden  testNestedDefaultSort.golden  testNonExtantPathFails.golden  testNonExtantPathSucceeds.golden  testStatusBlockedEmptyFails.golden
test/functional/Functional/Prelude/: GoldenParams.hs
test/functional/Functional/Update/input/: set_nested_blocking_id.json
test/functional/Functional/Update/output/: testSetBlockingId.golden  testSetDeadline.golden  testSetDeadlineFailure.golden  testSetDeadlineInteractive.golden  testSetDesc.golden  testSetDescGroupFailure.golden  testSetDescInteractive.golden  testSetId.golden  testSetIdDuplicateFailure.golden  testSetNestedBlockingId.golden  testSetPriority.golden  testSetPriorityInteractive.golden  testSetStatus.golden  testSetStatusBlockedSuccess.golden  testSetStatusInteractive.golden
test/integration/: Main.hs
test/integration/Integration/: Failures.hs  Misc.hs  Prelude.hs
test/integration/toml/: no-path.toml  no-path_windows.toml
test/integration/toml/todo/: index.json
test/unit/: Main.hs
test/unit/Unit/: Prelude.hs
test/unit/Unit/Todo/: Index.hs
test/unit/Unit/Todo/Data/: Sorted.hs  Task.hs  TaskPriority.hs
tools/: bench.sh  haddock.sh
(+72 files in other folders)
