cabal-version:      2.4
name:               todo
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.8.2
copyright:          2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/todo/
bug-reports:        https://github.com/tbidne/todo/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  .gitignore
  cabal.project
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/todo

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    StrictData
    TypeFamilyDependencies
    TypeOperators

  default-language:   GHC2021

library
  import:          common-lang
  other-modules:   Paths_todo
  autogen-modules: Paths_todo
  exposed-modules:
    Todo
    Todo.Data.Task
    Todo.Data.Task.Render
    Todo.Data.Task.Render.Utils
    Todo.Data.Task.Sorted
    Todo.Data.Task.Sorted.Internal
    Todo.Data.Task.TaskId
    Todo.Data.Task.TaskId.Internal
    Todo.Data.Task.TaskPriority
    Todo.Data.Task.TaskStatus
    Todo.Data.Timestamp
    Todo.Index
    Todo.Index.Internal
    Todo.Prelude
    Todo.Runner
    Todo.Runner.Args

  build-depends:
    , aeson                 ^>=2.2.0.0
    , aeson-pretty          ^>=0.8.9
    , base                  >=4.19.0.0  && <4.21
    , bytestring            >=0.10.12.0 && <0.13
    , containers            >=0.6.2.1   && <0.8
    , effects-exceptions    ^>=0.1
    , effects-fs            ^>=0.1
    , effects-optparse      ^>=0.1
    , effects-terminal      ^>=0.1
    , effects-time          ^>=0.1
    , filepath              >=1.4.2.1   && <1.6
    , nonempty-containers   >=0.3.4.2   && <0.4
    , optparse-applicative  >=0.15      && <0.19
    , pretty-terminal       ^>=0.1
    , text                  >=2.0       && <2.2
    , text-display          >=0.0.3.0   && <0.6
    , time                  >=1.9.3     && <1.15

  -- For tuple syntax
  if impl(ghc >=9.10.1)
    build-depends: ghc-experimental ^>=0.1.0.0

  hs-source-dirs:  src

executable todo
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , todo

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Prelude
    Unit.Todo.Data.Task
    Unit.Todo.Data.Task.Sorted
    Unit.Todo.Index

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , hedgehog             >=1.0.2   && <1.5
    , nonempty-containers
    , tasty                >=1.1.0.3 && <1.6
    , tasty-hedgehog       >=1.2.0.0 && <1.5
    , tasty-hunit          >=0.9     && <0.11
    , text
    , time
    , todo

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Functional.Delete
    Functional.Insert
    Functional.List
    Functional.Prelude

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , effects-env
    , effects-exceptions
    , effects-fs
    , effects-terminal
    , env-guard           ^>=0.2
    , mtl                 >=2.2.1    && <2.4
    , regex-tdfa          ^>=1.3.0
    , tasty               >=1.1.0.3  && <1.6
    , tasty-golden        ^>=2.3.1.1
    , todo

  hs-source-dirs: test/functional
